--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -168,12 +168,34 @@ services:
     networks:
       - eth-network
 
+  blockscout2-db:
+    image: postgres:15-alpine
+    container_name: blockscout2-db
+    environment:
+      POSTGRES_PASSWORD: ''
+      POSTGRES_USER: 'postgres'
+      POSTGRES_DB: 'blockscout2'
+      POSTGRES_HOST_AUTH_METHOD: 'trust'
+    volumes:
+      - ./data/blockscout2-db:/var/lib/postgresql/data
+    ports:
+      - "7433:5432"
+    networks:
+      - eth-network-poi
+
   redis:
     image: redis:alpine
     container_name: redis
     command: redis-server
     networks:
       - eth-network
+
+  redis-poi:
+    image: redis:alpine
+    container_name: redis-poi
+    command: redis-server
+    networks:
+      - eth-network-poi
 
   blockscout-backend:
     image: blockscout/blockscout:latest
@@ -207,6 +229,38 @@ services:
     networks:
       - eth-network
 
+  blockscout-poi-backend:
+    image: blockscout/blockscout:latest
+    container_name: blockscout-poi-backend
+    depends_on:
+      - blockscout2-db
+      - redis-poi
+      - geth-poi-node1
+    command: >
+      sh -c "
+      bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" &&
+      bin/blockscout start
+      "
+    environment:
+      ETHEREUM_JSONRPC_VARIANT: 'geth'
+      BLOCK_TRANSFORMER: 'clique'
+      ETHEREUM_JSONRPC_HTTP_URL: 'http://geth-poi-node1:8545'
+      ETHEREUM_JSONRPC_WS_URL: 'ws://geth-poi-node1:8546'
+      DATABASE_URL: 'postgresql://postgres:@blockscout2-db:5432/blockscout2'
+      COIN_NAME: "ETH_IOT2"
+      CHAIN_ID: '1338'
+      SECRET_KEY_BASE: 'RMgI4C1HSkxsEjdhtGMfwAHfyT6CKWXOgzCboJflfSm4jeAlic52io05KB6mqzc6'
+      PORT: '4000'
+      MIX_ENV: 'prod'
+      ECTO_USE_SSL: 'false'
+      HEART_COMMAND: 'bin/blockscout start'
+      API_V2_ENABLED: 'true'
+      REDIS_URL: 'redis://redis-poi:6379'
+    ports:
+      - "4001:4000"
+    networks:
+      - eth-network-poi
+
   blockscout-frontend:
     image: ghcr.io/blockscout/frontend:latest
     container_name: blockscout-frontend
@@ -233,9 +287,194 @@ services:
     networks:
       - eth-network
 
+  blockscout-poi-frontend:
+    image: ghcr.io/blockscout/frontend:latest
+    container_name: blockscout-poi-frontend
+    depends_on:
+      - blockscout-poi-backend
+    environment:
+      NEXT_PUBLIC_APP_HOST: 'localhost'
+      NEXT_PUBLIC_APP_PORT: '3001'
+      NEXT_PUBLIC_APP_PROTOCOL: 'http'
+      NEXT_PUBLIC_API_HOST: 'localhost'
+      NEXT_PUBLIC_API_PORT: '4001'
+      NEXT_PUBLIC_API_PROTOCOL: 'http'
+      NEXT_PUBLIC_STATS_API_HOST: 'http://localhost:4001'
+      NEXT_PUBLIC_NETWORK_NAME: 'ETH_IOT2'
+      NEXT_PUBLIC_NETWORK_SHORT_NAME: 'ETH_IOT2'
+      NEXT_PUBLIC_NETWORK_ID: '1338'
+      NEXT_PUBLIC_NETWORK_CURRENCY_NAME: 'ETH'
+      NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL: 'ETH'
+      NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS: '18'
+      NEXT_PUBLIC_API_BASE_PATH: '/'
+      NEXT_PUBLIC_HOMEPAGE_CHARTS: '["daily_txs"]'
+    ports:
+      - "3001:3000"
+    networks:
+      - eth-network-poi
+
+  geth-poi-node1:
+    build: .
+    container_name: geth-poi-node1
+    ports:
+      - "9545:8545"
+      - "9549:8546"
+      - "40303:30303"
+    networks:
+      - eth-network-poi
+    volumes:
+      - ./data_poi/node1:/root/.ethereum
+      - ./keystore:/root/.ethereum/keystore
+      - ./genesis_poi.json:/root/genesis.json
+      - ./scripts:/root/scripts
+    command: >
+      sh -c "
+      if [ \! -d /root/.ethereum/geth ]; then
+        geth --datadir /root/.ethereum init /root/genesis.json;
+      fi;
+      geth --datadir /root/.ethereum 
+      --networkid 1338 
+      --port 30303 
+      --http 
+      --http.addr 0.0.0.0 
+      --http.port 8545 
+      --http.api eth,net,web3,personal,miner,poi,admin,debug 
+      --http.corsdomain '*' 
+      --http.vhosts '*' 
+      --ws 
+      --ws.addr 0.0.0.0 
+      --ws.port 8546 
+      --ws.api eth,net,web3,personal,poi,admin,debug 
+      --ws.origins '*' 
+      --allow-insecure-unlock 
+      --mine 
+      --miner.etherbase 0x0f94b280babe816b9de18f2164a82b8315d94419 
+      --unlock 0x0f94b280babe816b9de18f2164a82b8315d94419 
+      --password /root/scripts/password.txt 
+      --verbosity 4
+      "
+
+  geth-poi-node2:
+    build: .
+    container_name: geth-poi-node2
+    ports:
+      - "9546:8545"
+      - "40304:30303"
+    networks:
+      - eth-network-poi
+    volumes:
+      - ./data_poi/node2:/root/.ethereum
+      - ./keystore:/root/.ethereum/keystore
+      - ./genesis_poi.json:/root/genesis.json
+      - ./scripts:/root/scripts
+    command: >
+      sh -c "
+      if [ \! -d /root/.ethereum/geth ]; then
+        geth --datadir /root/.ethereum init /root/genesis.json;
+      fi;
+      sleep 10;
+      geth --datadir /root/.ethereum 
+      --networkid 1338 
+      --port 30303 
+      --http 
+      --http.addr 0.0.0.0 
+      --http.port 8545 
+      --http.api eth,net,web3,personal,miner,poi,admin,debug 
+      --http.corsdomain '*' 
+      --http.vhosts '*' 
+      --allow-insecure-unlock 
+      --mine 
+      --miner.etherbase 0xd41aa69ee1bf7c0008b00574d1b1e86c33019fdb 
+      --unlock 0xd41aa69ee1bf7c0008b00574d1b1e86c33019fdb 
+      --password /root/scripts/password.txt 
+      --verbosity 4 
+      --bootnodes enode://ea2172f2c1efd1cdf095d6048733e8366dea039d96ee1ee3ee9716500dcc78c8be23a011e187651b22e61b82a6d315263e8fcf0cab65963ae7f5417e7706c355@geth-poi-node1:30303
+      "
+    depends_on:
+      - geth-poi-node1
+
+  geth-poi-node3:
+    build: .
+    container_name: geth-poi-node3
+    ports:
+      - "9547:8545"
+      - "40305:30303"
+    networks:
+      - eth-network-poi
+    volumes:
+      - ./data_poi/node3:/root/.ethereum
+      - ./keystore:/root/.ethereum/keystore
+      - ./genesis_poi.json:/root/genesis.json
+      - ./scripts:/root/scripts
+    command: >
+      sh -c "
+      if [ \! -d /root/.ethereum/geth ]; then
+        geth --datadir /root/.ethereum init /root/genesis.json;
+      fi;
+      sleep 15;
+      geth --datadir /root/.ethereum 
+      --networkid 1338 
+      --port 30303 
+      --http 
+      --http.addr 0.0.0.0 
+      --http.port 8545 
+      --http.api eth,net,web3,personal,miner,poi,admin,debug 
+      --http.corsdomain '*' 
+      --http.vhosts '*' 
+      --allow-insecure-unlock 
+      --mine 
+      --miner.etherbase 0x64928a3b10804379c030d04f7e07c91e09eb3f98 
+      --unlock 0x64928a3b10804379c030d04f7e07c91e09eb3f98 
+      --password /root/scripts/password.txt 
+      --verbosity 4 
+      --bootnodes enode://ea2172f2c1efd1cdf095d6048733e8366dea039d96ee1ee3ee9716500dcc78c8be23a011e187651b22e61b82a6d315263e8fcf0cab65963ae7f5417e7706c355@geth-poi-node1:30303
+      "
+    depends_on:
+      - geth-poi-node2
+
+  geth-poi-node4:
+    build: .
+    container_name: geth-poi-node4
+    ports:
+      - "9548:8545"
+      - "40306:30303"
+    networks:
+      - eth-network-poi
+    volumes:
+      - ./data_poi/node4:/root/.ethereum
+      - ./keystore:/root/.ethereum/keystore
+      - ./genesis_poi.json:/root/genesis.json
+      - ./scripts:/root/scripts
+    command: >
+      sh -c "
+      if [ \! -d /root/.ethereum/geth ]; then
+        geth --datadir /root/.ethereum init /root/genesis.json;
+      fi;
+      sleep 20;
+      geth --datadir /root/.ethereum 
+      --networkid 1338 
+      --port 30303 
+      --http 
+      --http.addr 0.0.0.0 
+      --http.port 8545 
+      --http.api eth,net,web3,personal,miner,poi,admin,debug 
+      --http.corsdomain '*' 
+      --http.vhosts '*' 
+      --allow-insecure-unlock 
+      --verbosity 4 
+      --bootnodes enode://ea2172f2c1efd1cdf095d6048733e8366dea039d96ee1ee3ee9716500dcc78c8be23a011e187651b22e61b82a6d315263e8fcf0cab65963ae7f5417e7706c355@geth-poi-node1:30303
+      "
+    depends_on:
+      - geth-poi-node3
+
 networks:
   eth-network:
     driver: bridge
     ipam:
       config:
         - subnet: 172.20.0.0/16
+  eth-network-poi:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.21.0.0/16
